--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
