--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-router-hash-link": "^2.4.5",
     "@types/styled-components": "^5.1.25",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "6",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
