--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "6",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.5",
     "redux": "^4.2.0",
     "sass": "^1.53.0",
     "styled-components": "^5.3.5",
