--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -28,6 +28,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: yarn ci, build and test
         run: |
-          yarn install --frozen-lockfile
-          yarn run build --if-present
-          yarn test
+          npm ci
+          npm run build --if-present
+          npm test      
