--- a/.github/workflows/build_test_react.yml
+++ b/.github/workflows/build_test_react.yml
@@ -28,6 +28,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: yarn ci, build and test
         run: |
+          npm install
           npm ci
           npm run build --if-present
           npm test      
