--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "choose-state-managers",
   "version": "0.1.0",
+  "homepage": "https://77wiz77.github.io/choose-state-managers",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -17,7 +18,6 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-router-hash-link": "^2.4.5",
     "@types/styled-components": "^5.1.25",
-    "gh-pages": "^5.0.0",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
@@ -65,6 +65,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "@typescript-eslint/parser": "^5.50.0",
-    "eslint": "^8.33.0"
+    "eslint": "^8.33.0",
+    "gh-pages": "^5.0.0"
   }
 }
