--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -2,11 +2,11 @@ name: Deploy React Application
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the product branch
+  # Triggers the workflow on push or pull request events but only for the master branch
   push:
-    branches: [ product ]
+    branches: [ master ]
   pull_request:
-    branches: [ product ]
+    branches: [ master ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
