--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -28,10 +28,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm ci, build and test
         run: |
-          npm install
-          npm ci
-          npm run build --if-present
-          npm test      
+          yarn install --frozen-lockfile
+          yarn run build --if-present
+          yarn test
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
