--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -28,6 +28,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm ci, build and test
         run: |
+          nvm install 14.16.1
+          nvm use 14.16.1
           yarn install --frozen-lockfile
           yarn run build --if-present
           yarn test
