--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -28,14 +28,11 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: npm ci, build and test
         run: |
-          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.37.0/install.sh | bash
-          nvm install 14.16.1
-          nvm use 14.16.1
-          yarn install --frozen-lockfile
-          yarn run build --if-present
-          yarn test
+          npm ci
+          npm run build --if-present
+          npm test      
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-          publish_dir: ./build   
+          publish_dir: ./build 
